@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-14T16:00:39Z",
-  "count_outdated" : 66,
-  "uniques_outdated" : 49,
+  "timestamp" : "2024-01-19T00:27:03Z",
+  "count_outdated" : 67,
+  "uniques_outdated" : 50,
   "count" : 73,
   "uniques" : 56,
   "clones" : [
-    {
-      "timestamp": "2024-01-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-07T00:00:00Z",
       "count": 3,
