@@ -1,12 +1,7 @@
 {
-  "count": 7,
-  "uniques": 7,
+  "count": 6,
+  "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2024-01-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-07T00:00:00Z",
       "count": 3,
